@@ -46,7 +46,6 @@
         'ci': ci,
         'ci_offset': ci_offset,
         'column_meta': column_meta,
-        'type_upper': type_upper,
         'default_value': default_value,
         'char_editing': char_editing
     } only %}
