@@ -85,7 +85,7 @@
                                 'column_number': 0,
                                 'ci': 3,
                                 'ci_offset': 0,
-                                'type_upper': '',
+                                'default_value': '',
                                 'column_meta': {},
                                 'char_editing': char_editing,
                             } only %}
@@ -333,7 +333,7 @@
                                     'column_number': row_num,
                                     'ci': 3,
                                     'ci_offset': 0,
-                                    'type_upper': types_upper[row_num],
+                                    'default_value': default_values[row_num],
                                     'column_meta': rows_meta[row_num],
                                     'char_editing': char_editing,
                                 } only %}
