@@ -60,6 +60,7 @@ phpMyAdmin - ChangeLog
 - issue #15634 Only use session_set_cookie_params once on PHP >= 7.3.0 versions for single signon auth
 - issue #14698 Fixed database named as 'New' (language variable) causes PHP fatal error
 - issue #16355 Make textareas both sides resizable
+- issue #16366 Fix column definition form not showing default value
 
 5.0.2 (2020-03-20)
 - issue        Fixed deprecation warning "implode(): Passing glue string after array is deprecated." function on export page
